EKS-terraform/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: devboard-app
  labels:
    name: devboard-app
