EKS-terraform/03-go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: devboard-app
  labels:
    apps: backend
    tier: app
spec:
  replicas: 2
  selector:
    matchLabels:
      apps: backend
  template:
    metadata:
      labels:
        apps: backend
        tier: app
    spec:
      serviceAccountName: go-api-sa
      containers:
        - name: backend
          image: rohit5126/devboard-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: devboard-app
  labels:
    apps: backend
spec:
  type: ClusterIP        # internal only - never LoadBalancer or NodePort
  selector:
    apps: backend
  ports:
    - port: 8080
      targetPort: 8080
